tests/single_instruction_translation_validation/mcsema/register-variants-samereg/bsfl_r32_r32/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:184:23: error: use of undefined value '@my.cttz.i32'
  %10 = tail call i32 @my.cttz.i32(i32 %5, i1 true) #22
                      ^
0.02user 0.02system 0:00.04elapsed 102%CPU (0avgtext+0avgdata 27772maxresident)k
0inputs+16outputs (0major+3279minor)pagefaults 0swaps
